tests/baselines/reference/functionLiteralForOverloads2(strict=true).errors.txt
functionLiteralForOverloads2.ts(6,17): error TS7006: Parameter 'x' implicitly has an 'any' type.
functionLiteralForOverloads2.ts(12,17): error TS7006: Parameter 'x' implicitly has an 'any' type.


==== functionLiteralForOverloads2.ts (2 errors) ====
    // basic uses of function literals with constructor overloads
    
    class C {
        constructor(x: string);
        constructor(x: number);
        constructor(x) { }
                    ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    }
    
    class D<T> {
        constructor(x: string);
        constructor(x: number);
        constructor(x) { }
                    ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    }
    
    var f: {
        new(x: string): C;
        new(x: number): C;
    } = C;
    
    var f2: {
        new<T>(x: string): C;
        new<T>(x: number): C;
    } = C;
    
    var f3: {
        new<T>(x: string): D<T>;
        new<T>(x: number): D<T>;
    } = D;